fixed image spacing, made buttons look better and replaced loader__gif class with "three"

--- a/image.css
+++ b/image.css
@@ -335,7 +335,7 @@
   padding: 5%;
 }
 
-.loader__gif {
+.three {
   width: 30%;
   height: 30%;
 }
